--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileFinalProjectLabs"
         tools:targetApi="31">
+
+        <!-- FinalProjectMainPage Activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".FinalProjectMainPage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- SavedTerms Activity -->
+        <activity
+            android:name=".DictionaryAPI.SavedTerms"
+            android:exported="false" />
+
+        <!-- WordDefinitionsPage Activity -->
+        <activity
+            android:name=".DictionaryAPI.WordDefinitionsPage"
+            android:exported="true" />
+
+        <!-- MainActivity Activity -->
+        <activity
+            android:name=".DictionaryAPI.MainActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
