--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Mobile"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileFinalProjectLabs"
@@ -28,7 +28,7 @@
         <!-- SavedTerms Activity -->
         <activity
             android:name=".DictionaryAPI.SavedTerms"
-            android:exported="false" />
+            android:exported="true" />
 
         <!-- WordDefinitionsPage Activity -->
         <activity
