--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,14 @@
         android:theme="@style/Theme.MobileFinalProjectLabs"
         tools:targetApi="31">
         <activity
-            android:name=".SunriseSunsetAPP.MainSunriseSunset"
+            android:name=".SunriseSunsetAPP.ActivityFavoriteLocations"
             android:exported="false" />
-        <!-- FinalProjectMainPage Activity -->
+        <activity
+            android:name=".SunriseSunsetAPP.ShowResult"
+            android:exported="false" />
+        <activity
+            android:name=".SunriseSunsetAPP.MainSunriseSunset"
+            android:exported="false" /> <!-- FinalProjectMainPage Activity -->
         <activity
             android:name=".FinalProjectMainPage"
             android:exported="true">
