--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/recipe_book"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/recipe_book"
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileFinalProjectLabs"
         tools:targetApi="31">
@@ -18,7 +18,7 @@
             android:name=".DetailsListActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".RecipeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
